# rscel

./: Cargo.toml  Dockerfile  Dockerfile-al2  USAGE.md  build_wasm_pkg.sh
.github/workflows/: ci.yml  rust.yml
python/: Cargo.toml
python/src/: cel_py_object.rs  celpycallable.rs  frompyobject.rs  lib.rs  py_cel_context.rs
rscel/: Cargo.toml
rscel-macro/src/types/: dispatch_arg.rs  dispatch_func.rs
rscel/src/compiler/: compiler.rs
rscel/src/context/: default_funcs.rs  default_macros.rs  type_funcs.rs
rscel/src/context/default_funcs/: format.rs  list.rs  math.rs  string.rs  time_funcs.rs
rscel/src/context/default_funcs/list/: flatten.rs  reverse.rs  slice.rs  unique.rs
rscel/src/context/default_funcs/math/: cbrt.rs  exp.rs  ln.rs  trunc.rs
rscel/src/context/default_funcs/string/: index_of.rs  match_captures_all.rs  repeat.rs  replace_i.rs  split.rs  trim_matches.rs
rscel/src/context/default_funcs/time_funcs/: set_date.rs  set_full_year.rs  set_hours.rs  set_milliseconds.rs  set_minutes.rs  set_month.rs  set_seconds.rs  start_of_day.rs  start_of_month.rs  start_of_year.rs  to_rfc3339.rs
rscel/src/context/default_macros/: all.rs  count.rs  exists.rs  exists_one.rs  filter.rs  find.rs  flat_map.rs  map.rs  reduce.rs
rscel/src/interp/: interp.rs  types.rs
rscel/src/interp/types/: bytecode.rs
rscel/src/tests/: general_tests.rs
rscel/src/types/: cel_value.rs
test/: test_rscel.py
wasm/: Cargo.toml
wasm/example/: package-lock.json  package.json
wasm/tests/: package-lock.json
