[workspace]
members = ["rscel", "python", "wasm", "rscel-macro", "extensions/to_sql"]
default-members = ["rscel"]
resolver = "2"

[workspace.package]
version = "1.0.8"
edition = "2021"
description = "Cel interpreter in rust"
license = "MIT"

[profile.release-with-debug]
inherits = "release"
debug = true
lto = false

[profile.release]
lto = true

[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
bincode = "1.3.3"
