[package]
name = "rscel_python"
version = { workspace = true }
edition = { workspace = true }
description = "Python bindings for the rscel package"
license = { workspace = true }

[lib]
name = "rscel"
crate-type = ["cdylib"]

[dependencies]
rscel = { path = "../rscel" }
rscel-to-sql = { path = "../extensions/to_sql" }
pyo3 = { version = "0.28.1", features = [
    "py-clone",
    "extension-module",
    "chrono",
] }
chrono = { workspace = true }
serde_json = { workspace = true }
bincode = {workspace = true}

[build-dependencies]
pyo3-build-config = "0.28.1"
