[package]
name = "rscel"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[features]
default = ["type_prop", "protobuf", "neg_index"]
ast_ser = []
debug_output = []
type_prop = []
neg_index = []
protobuf = ["dep:protobuf"]

[build-dependencies]
protobuf-codegen = { version = "3.7.1" }
protoc-bin-vendored = { version = "3.1.0" }

[dependencies]
rscel-macro = { version = "1.0.7", path = "../rscel-macro" }
test-case = "3.3.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_with = { version = "3.16.1", features = ["chrono"] }
serde_json = { workspace = true }
chrono = { workspace = true }
duration-str = "0.20.0"
protobuf = { version = "3.7.2", optional = true }
chrono-tz = "0.10.4"
num-traits = "0.2.19"
uom = "0.38.0"
